convert the system into mulitenant platform